# RustyServer

./: Cargo.toml  main.rs  todo.txt
.github/workflows/: qodana_code_quality.yml  rust.yml
database/: database.rs  db.pgsql
server/: analyser.rs  mod.rs  protocols.rs  response.rs
src/: main.rs  todo.txt
src/config/: config.toml  mod.rs
src/database/: database.rs  db.pgsql
src/server/: analyser.rs  history.rs  mod.rs  protocols.rs  response.rs  users.rs
src/tests/: mod.rs
src/utils/: exception.rs  mod.rs
utils/: mod.rs
