[package]
name = "RustyServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.8.14"
colored = "2.1.0"
chrono = "0.4.38"
time = "0.3.36"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
async-std = "1.12.0"
futures = "0.3.30"